feat(JsonParser): JsonParser를 위한 클래스 생성